[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Heart.png" type="Texture" id=2]
[ext_resource path="res://Bullet.png" type="Texture" id=3]
[ext_resource path="res://Jewel.png" type="Texture" id=4]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="JewelContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -416.0
margin_bottom = 24.0
custom_constants/separation = 8

[node name="Jewel" type="TextureRect" parent="JewelContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="JewelNum" type="Label" parent="JewelContainer"]
margin_left = 24.0
margin_top = 1.0
margin_right = 32.0
margin_bottom = 15.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
valign = 2
uppercase = true

[node name="BulletContainer" type="HBoxContainer" parent="."]
margin_left = 121.0
margin_top = 8.0
margin_right = 357.0
margin_bottom = 24.0

[node name="Bullet1" type="TextureRect" parent="BulletContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet2" type="TextureRect" parent="BulletContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet3" type="TextureRect" parent="BulletContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet4" type="TextureRect" parent="BulletContainer"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet5" type="TextureRect" parent="BulletContainer"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet6" type="TextureRect" parent="BulletContainer"]
margin_left = 100.0
margin_right = 116.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet7" type="TextureRect" parent="BulletContainer"]
margin_left = 120.0
margin_right = 136.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet8" type="TextureRect" parent="BulletContainer"]
margin_left = 140.0
margin_right = 156.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet9" type="TextureRect" parent="BulletContainer"]
margin_left = 160.0
margin_right = 176.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet10" type="TextureRect" parent="BulletContainer"]
margin_left = 180.0
margin_right = 196.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet11" type="TextureRect" parent="BulletContainer"]
margin_left = 200.0
margin_right = 216.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Bullet12" type="TextureRect" parent="BulletContainer"]
margin_left = 220.0
margin_right = 236.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="LifeContainer" type="HBoxContainer" parent="."]
margin_left = 407.0
margin_top = 8.0
margin_right = 503.0
margin_bottom = 24.0

[node name="Heart1" type="TextureRect" parent="LifeContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Heart2" type="TextureRect" parent="LifeContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Heart3" type="TextureRect" parent="LifeContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Heart4" type="TextureRect" parent="LifeContainer"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Heart5" type="TextureRect" parent="LifeContainer"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
